# satellite_pose_estimation

./: .gitmodules  EPnP.py  PE_main.py  PE_main_test.py  README.md  feat_ext_cv2.py  feature_extraction_text.py  main_test.py
MATLAB/: Pose_estimation_2_Lorenzo.m
MATLAB/EPnP/: efficient_pnp_gauss.m
feature_extraction/: feat_ext_cv2.py  feature_extraction_text.py
feature_extraction_cnn/: README.md  coco_eval.py  dataset_annotation.py  dataset_annotation_keypoint.py  evaluate.py  extract_features.py  keypointrcnn_evaluate.py  keypointrcnn_train.py  normalize.py  synthetic_generator.py
matlab_implementation/: case_1.mat  case_2.mat  case_3.mat  case_4.mat  feature_matching.m
robotics/: LICENSE  build.sh  down.sh  down_controller.sh  up.sh  up_controller.sh
robotics/daheng_camera/: Containerfile
robotics/daheng_camera/devel/: .catkin  local_setup.sh
robotics/daheng_camera/src/galaxy_camera_launch/: CMakeLists.txt  package.xml
robotics/daheng_camera/src/galaxy_camera_launch/launch/: mer2.launch
robotics/spd_controller/: Containerfile
robotics/spd_controller/devel/: .rosinstall
robotics/spd_controller/devel/include/galaxy_camera/: CameraConfig.h
robotics/spd_controller/src/spd_controller/: CMakeLists.txt  package.xml  setup.py
ros/: .gitignore
ros/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros/src/spd_simulations/: CMakeLists.txt  package.xml  setup.py
ros/src/spd_simulations/launch/: test_simulation.launch
ros/src/spd_simulations/nodes/: simulation_controller.py  test_simulation.py
(+12 files in other folders)
